apps/base/immich/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  labels:
    app: immich
    component: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
      component: redis
  template:
    metadata:
      labels:
        app: immich
        component: redis
    spec:
      containers:
      - name: redis
        image: docker.io/redis:6.2-alpine@sha256:e3b17ba9479deec4b7d1eeec1548a253acc5374d68d3b27937fcfe4df8d18c7e
        ports:
        - containerPort: 6379
          name: redis
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          periodSeconds: 10
